# agentic-lint-ratchet

./: .gitignore  .helmignore  .lint-ratchet.config.yml  .release-please-manifest.json  .shellcheckrc  .yamllint  CHANGELOG-chart.md  Chart.yaml  PROMPT.md  README.md  agents.md  catalog-info.yaml  claude.md  config.yaml  eslint.config.js  gemini.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  release-please-config.json  values.yaml
.github/: CODEOWNERS
.github/actions/lint-ratchet/: RATCHET.md  action.yml
.github/actions/mutation-testing-ratchet/: RATCHET.md  action.yml
.github/actions/ratchet-runner/: action.yml  dispatch-pr-ci.sh  preflight.sh
.github/workflows/: ci.yml  lint-ratchet.yml  release-please.yml  security.yml
actions/: lint-ratchet.yml
config/: .lint-ratchet.config.example.yml  config.example.yaml
docs/: in-cluster-bot.md  index.md  lint-ratchet.md  mutation-testing-ratchet.md  ratchets.md  roadmap.md
docs/examples/: lint-ratchet.workflow.yml  mutation-testing-ratchet.workflow.yml
scripts/: release-please-component-smoke.sh  run-ratchet.mjs  sync_prompt_to_values.py  sync_skill_version_to_values.py  validate-mutation-ratchet.py
scripts/runtime/: cursor.mjs  env.mjs  errors.mjs  pi.mjs  registry.mjs
skills/lint-ratchet/: SKILL.md  package.json
skills/lint-ratchet/references/: config-example.yml
templates/: trigger-cronjob.yaml
test/: action-preflight.bats  ratchet-prompt-contract.bats  release-please-component-smoke.bats  run-ratchet.bats  sync-skill-version.bats
workflows/: ci.yml  lint-ratchet.yml
(+3 files in other folders)
