[project]
name = "agentic-lint-ratchet"
version = "0"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
target-version = "py311"
src = ["scripts"]
# Active coverage: scripts/ (see CI). YAML under .github/: yamllint via npm run lint:yaml / npm test.
# Other prose/YAML/Helm paths remain deferred per CI scope comments / eslint.config.js map.

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

