[project]
name = "agentic-lint-ratchet"
version = "0"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
target-version = "py311"
src = ["scripts"]
# Active coverage: scripts/ (see CI). YAML: yamllint via npm run lint:yaml — .github/, root
# config, config/, workflows/, Chart.yaml, actions/, values.yaml (not templates/ — Helm templating).

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

