[project]
name = "agentic-lint-ratchet"
version = "0"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
target-version = "py311"
src = ["scripts"]
# Path scope: scripts/**/*.py only (CI runs Ruff when any exist; see .github/workflows/ci.yml).
#
# Depth-first ratchet queue (Python):
#   1. scripts/**/*.py — active when present.
#   (No other Python packages in this repository.)
#
# YAML prose uses yamllint (npm run lint:yaml), not Ruff.

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

